Feature/deletion (#5)
* Support deletion

* Swagger
