# docs/swagger.yml
@@ -67,7 +67,6 @@ paths:
         in: path
         schema:
           type: string
-          format: uuid
         required: true
       - name: size
         in: path
@@ -120,6 +119,27 @@ paths:
           description: Internal server error.
         "503":
           description: Service unavailable.
+  /internal/api/v1/images/{image_id}:
+    delete:
+      tags: [internal]
+      summary: Delete the image.
+      parameters:
+      - name: image_id
+        in: path
+        schema:
+          type: string
+        required: true
+      responses:
+          "200":
+            description: OK.
+          "400":
+            description: Bad request.
+          "404":
+            description: Not found.
+          "500":
+            description: Internal server error.
+          "503":
+            description: Service unavailable.
   /internal/api/v1/images:
     put:
       tags: [internal]
@@ -144,6 +164,7 @@ paths:
                   type: string
                 category:
                   type: string
+                  description: Category should not be "all". This name is reserved.
                 image:
                   type: string
                   format: binary
